Bug 369337 - Crash if I close the watched nicks tab
Summary: Crash if I close the watched nicks tab
Status: RESOLVED FIXED
Alias: None
Product: konversation
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.6
Platform: Arch Linux Linux
: NOR crash
Target Milestone: ---
Assignee: Konversation Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-09-25 16:27 UTC by Lays Rodrigues
Modified: 2016-09-26 17:04 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Lays Rodrigues 2016-09-25 16:27:37 UTC
Application: konversation (1.6-branch #4910)

Qt Version: 5.7.0
Frameworks Version: 5.26.0
Operating System: Linux 4.7.4-1-ARCH x86_64
Distribution (Platform): Archlinux Packages

-- Information about the crash:
<In detail, tell us what you were doing  when the application crashed.>

The crash can be reproduced every time.

-- Backtrace:
Application: Konversation (konversation), signal: Segmentation fault
Using host libthread_db library "/usr/lib/libthread_db.so.1".
[Current thread is 1 (Thread 0x7fdcd25bb800 (LWP 8228))]

Thread 5 (Thread 0x7fdcad01f700 (LWP 8233)):
#0  0x00007fdcc95f44b8 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /usr/lib/libpthread.so.0
#1  0x00007fdccbcc6b66 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQt5Core.so.5
#2  0x00007fdccbcc2274 in ?? () from /usr/lib/libQt5Core.so.5
#3  0x00007fdccbcc5d78 in ?? () from /usr/lib/libQt5Core.so.5
#4  0x00007fdcc95ee454 in start_thread () from /usr/lib/libpthread.so.0
#5  0x00007fdccb2d77df in clone () from /usr/lib/libc.so.6

Thread 4 (Thread 0x7fdcb5c5a700 (LWP 8232)):
#0  0x00007fdccb2ce48d in poll () from /usr/lib/libc.so.6
#1  0x00007fdcc5a7a066 in ?? () from /usr/lib/libglib-2.0.so.0
#2  0x00007fdcc5a7a17c in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#3  0x00007fdccbef459b in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQt5Core.so.5
#4  0x00007fdccbe9e0da in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQt5Core.so.5
#5  0x00007fdccbcc10f3 in QThread::exec() () from /usr/lib/libQt5Core.so.5
#6  0x00007fdccbcc5d78 in ?? () from /usr/lib/libQt5Core.so.5
#7  0x00007fdcc95ee454 in start_thread () from /usr/lib/libpthread.so.0
#8  0x00007fdccb2d77df in clone () from /usr/lib/libc.so.6

Thread 3 (Thread 0x7fdcb7072700 (LWP 8231)):
#0  0x00007fdccbef3b08 in ?? () from /usr/lib/libQt5Core.so.5
#1  0x00007fdcc5a795b9 in g_main_context_prepare () from /usr/lib/libglib-2.0.so.0
#2  0x00007fdcc5a79f8b in ?? () from /usr/lib/libglib-2.0.so.0
#3  0x00007fdcc5a7a17c in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#4  0x00007fdccbef459b in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQt5Core.so.5
#5  0x00007fdccbe9e0da in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQt5Core.so.5
#6  0x00007fdccbcc10f3 in QThread::exec() () from /usr/lib/libQt5Core.so.5
#7  0x00007fdccc305e75 in ?? () from /usr/lib/libQt5DBus.so.5
#8  0x00007fdccbcc5d78 in ?? () from /usr/lib/libQt5Core.so.5
#9  0x00007fdcc95ee454 in start_thread () from /usr/lib/libpthread.so.0
#10 0x00007fdccb2d77df in clone () from /usr/lib/libc.so.6

Thread 2 (Thread 0x7fdcbcfd5700 (LWP 8230)):
#0  0x00007fdccb2ce48d in poll () from /usr/lib/libc.so.6
#1  0x00007fdcc798c8e0 in ?? () from /usr/lib/libxcb.so.1
#2  0x00007fdcc798e679 in xcb_wait_for_event () from /usr/lib/libxcb.so.1
#3  0x00007fdcbef16469 in ?? () from /usr/lib/libQt5XcbQpa.so.5
#4  0x00007fdccbcc5d78 in ?? () from /usr/lib/libQt5Core.so.5
#5  0x00007fdcc95ee454 in start_thread () from /usr/lib/libpthread.so.0
#6  0x00007fdccb2d77df in clone () from /usr/lib/libc.so.6

Thread 1 (Thread 0x7fdcd25bb800 (LWP 8228)):
[KCrash Handler]
#5  0x00000000005d1c49 in ViewContainer::canMoveViewLeft() const ()
#6  0x00000000005d52fb in ViewContainer::updateViewActions(int) ()
#7  0x00000000005d6bdb in ViewContainer::updateFrontView() ()
#8  0x00000000005d6f73 in ViewContainer::viewSwitched(int) ()
#9  0x00000000005d9b54 in ViewContainer::cleanupAfterClose(ChatWindow*) ()
#10 0x00000000006b02a4 in ?? ()
#11 0x00007fdccbecb4e9 in QMetaObject::activate(QObject*, int, int, void**) () from /usr/lib/libQt5Core.so.5
#12 0x00000000006a4f12 in ChatWindow::closing(ChatWindow*) ()
#13 0x00000000005cad4b in ChatWindow::~ChatWindow() ()
#14 0x000000000057ffff in NicksOnline::~NicksOnline() ()
#15 0x0000000000580079 in NicksOnline::~NicksOnline() ()
#16 0x00000000005d36ca in ViewContainer::closeNicksOnlinePanel() ()
#17 0x00000000005da094 in ViewContainer::closeCurrentView() ()
#18 0x00000000006b0289 in ?? ()
#19 0x00007fdccbecb4e9 in QMetaObject::activate(QObject*, int, int, void**) () from /usr/lib/libQt5Core.so.5
#20 0x00007fdccce04472 in QAction::triggered(bool) () from /usr/lib/libQt5Widgets.so.5
#21 0x00007fdccce06e60 in QAction::activate(QAction::ActionEvent) () from /usr/lib/libQt5Widgets.so.5
#22 0x00007fdcccf74eea in ?? () from /usr/lib/libQt5Widgets.so.5
#23 0x00007fdcccf7b0ec in ?? () from /usr/lib/libQt5Widgets.so.5
#24 0x00007fdcccf7f0e0 in QMenu::mouseReleaseEvent(QMouseEvent*) () from /usr/lib/libQt5Widgets.so.5
#25 0x00007fdccce51f18 in QWidget::event(QEvent*) () from /usr/lib/libQt5Widgets.so.5
#26 0x00007fdcccf7fb9b in QMenu::event(QEvent*) () from /usr/lib/libQt5Widgets.so.5
#27 0x00007fdccce0ae3c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/libQt5Widgets.so.5
#28 0x00007fdccce1346d in QApplication::notify(QObject*, QEvent*) () from /usr/lib/libQt5Widgets.so.5
#29 0x00007fdccbe9fc80 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /usr/lib/libQt5Core.so.5
#30 0x00007fdccce11b1d in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool) () from /usr/lib/libQt5Widgets.so.5
#31 0x00007fdccce6c5a0 in ?? () from /usr/lib/libQt5Widgets.so.5
#32 0x00007fdccce6e763 in ?? () from /usr/lib/libQt5Widgets.so.5
#33 0x00007fdccce0ae3c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/libQt5Widgets.so.5
#34 0x00007fdccce125b1 in QApplication::notify(QObject*, QEvent*) () from /usr/lib/libQt5Widgets.so.5
#35 0x00007fdccbe9fc80 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /usr/lib/libQt5Core.so.5
#36 0x00007fdccc6790e3 in QGuiApplicationPrivate::processMouseEvent(QWindowSystemInterfacePrivate::MouseEvent*) () from /usr/lib/libQt5Gui.so.5
#37 0x00007fdccc67ac65 in QGuiApplicationPrivate::processWindowSystemEvent(QWindowSystemInterfacePrivate::WindowSystemEvent*) () from /usr/lib/libQt5Gui.so.5
#38 0x00007fdccc658cbb in QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQt5Gui.so.5
#39 0x00007fdcbef4c310 in ?? () from /usr/lib/libQt5XcbQpa.so.5
#40 0x00007fdcc5a79e67 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#41 0x00007fdcc5a7a0d0 in ?? () from /usr/lib/libglib-2.0.so.0
#42 0x00007fdcc5a7a17c in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#43 0x00007fdccbef457f in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQt5Core.so.5
#44 0x00007fdccbe9e0da in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQt5Core.so.5
#45 0x00007fdcccf7a03d in QMenu::exec(QPoint const&, QAction*) () from /usr/lib/libQt5Widgets.so.5
#46 0x00000000005dabd3 in ViewContainer::showViewContextMenu(QWidget*, QPoint const&) ()
#47 0x00000000006b02da in ?? ()
#48 0x00007fdccbecb4e9 in QMetaObject::activate(QObject*, int, int, void**) () from /usr/lib/libQt5Core.so.5
#49 0x00000000006a5c37 in ViewTree::showViewContextMenu(QWidget*, QPoint const&) const ()
#50 0x0000000000601791 in ViewTree::contextMenuEvent(QContextMenuEvent*) ()
#51 0x00007fdccce51f18 in QWidget::event(QEvent*) () from /usr/lib/libQt5Widgets.so.5
#52 0x00007fdcccf3962e in QFrame::event(QEvent*) () from /usr/lib/libQt5Widgets.so.5
#53 0x00007fdccd05fe03 in QAbstractItemView::viewportEvent(QEvent*) () from /usr/lib/libQt5Widgets.so.5
#54 0x00007fdccd09f2ec in QTreeView::viewportEvent(QEvent*) () from /usr/lib/libQt5Widgets.so.5
#55 0x00007fdccbe9f9e1 in QCoreApplicationPrivate::sendThroughObjectEventFilters(QObject*, QEvent*) () from /usr/lib/libQt5Core.so.5
#56 0x00007fdccce0ae15 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/libQt5Widgets.so.5
#57 0x00007fdccce136f0 in QApplication::notify(QObject*, QEvent*) () from /usr/lib/libQt5Widgets.so.5
#58 0x00007fdccbe9fc80 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /usr/lib/libQt5Core.so.5
#59 0x00007fdccce6c111 in ?? () from /usr/lib/libQt5Widgets.so.5
#60 0x00007fdccce6e763 in ?? () from /usr/lib/libQt5Widgets.so.5
#61 0x00007fdccce0ae3c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/libQt5Widgets.so.5
#62 0x00007fdccce125b1 in QApplication::notify(QObject*, QEvent*) () from /usr/lib/libQt5Widgets.so.5
#63 0x00007fdccbe9fc80 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /usr/lib/libQt5Core.so.5
#64 0x00007fdccc6790e3 in QGuiApplicationPrivate::processMouseEvent(QWindowSystemInterfacePrivate::MouseEvent*) () from /usr/lib/libQt5Gui.so.5
#65 0x00007fdccc67ac65 in QGuiApplicationPrivate::processWindowSystemEvent(QWindowSystemInterfacePrivate::WindowSystemEvent*) () from /usr/lib/libQt5Gui.so.5
#66 0x00007fdccc658cbb in QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQt5Gui.so.5
#67 0x00007fdcbef4c310 in ?? () from /usr/lib/libQt5XcbQpa.so.5
#68 0x00007fdcc5a79e67 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#69 0x00007fdcc5a7a0d0 in ?? () from /usr/lib/libglib-2.0.so.0
#70 0x00007fdcc5a7a17c in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#71 0x00007fdccbef457f in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQt5Core.so.5
#72 0x00007fdccbe9e0da in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQt5Core.so.5
#73 0x00007fdccbea65cc in QCoreApplication::exec() () from /usr/lib/libQt5Core.so.5
#74 0x00000000004d3ade in main ()

Reproducible: Always

Steps to Reproduce:
1. Open Watched Nicks List
2. Click with the right button to open the aux menu
3. Click on close

Actual Results:  
Program Crash

Expected Results:  
The tab is closed with success
Comment 1 Peter Simonsson 2016-09-26 17:04:06 UTC
Git commit c468e36ec7e51b77cc262e110d63c9e7bbfa3782 by Peter Simonsson.
Committed on 26/09/2016 at 17:03.
Pushed by psn into branch 'master'.

Fix crash only closing view

Make sure the m_popupViewIndex is reset if the view closed is the one
having the m_popupViewIndex.

M  +3    -0    src/viewer/viewcontainer.cpp

http://commits.kde.org/konversation/c468e36ec7e51b77cc262e110d63c9e7bbfa3782