Fix crash only closing view

Make sure the m_popupViewIndex is reset if the view closed is the one
having the m_popupViewIndex.

BUG:369337